<resources>
    <string name="app_name">IsuKe</string>
    <string-array name="main_arr">
        <item>设备中心</item>
        <item>场景模式</item>
        <item>个人中心</item>
    </string-array>

    <string-array name="StringFuData">
        <item>手机收不到短信如何处理?</item>
        <item>什么是语音控制?</item>
        <item>如何绑定设备?</item>

    </string-array>
    <string-array name="StringZiData">
        <item>手机收不到短信如何处理?</item>
        <item>什么是语音控制?</item>
        <item>如何绑定设备?</item>
    </string-array>

    <string-array name="repeat">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>

    </string-array>
    <string-array name="cities_data">
        <item>中国大陆+86</item>
        <item>香港+852</item>
        <item>澳门+853</item>
        <item>台湾+886</item>
        <item>阿联酋+971</item>
        <item>阿根廷+54</item>
        <item>奥地利+43</item>
        <item>澳大利亚+61</item>
        <item>爱沙尼亚+372</item>
        <item>埃及+20</item>
        <item>爱尔兰+353</item>
        <item>比利时+32</item>
        <item>保加利亚+359</item>
        <item>巴西+55</item>
        <item>巴哈马+1242</item>
        <item>白俄罗斯+375</item>
        <item>伯利兹+501</item>
        <item>巴拿马+507</item>
        <item>波兰+48</item>
        <item>德国+49</item>
        <item>丹麦+45</item>
        <item>俄罗斯+7</item>
        <item>芬兰+358</item>
        <item>法国+33</item>
        <item>菲律宾+63</item>
        <item>哥伦比亚+57</item>
        <item>韩国+82</item>
        <item>荷兰+31</item>
        <item>加拿大+1</item>
        <item>吉尔吉斯斯坦+996</item>
        <item>柬埔寨+855</item>
        <item>卡塔尔+974</item>
        <item>立陶宛+370</item>
        <item>卢森堡+352</item>
        <item>罗马尼亚+40</item>
        <item>摩洛哥+212</item>
        <item>蒙古+976</item>
        <item>马尔代夫+960</item>
        <item>墨西哥+52</item>
        <item>马来西亚+60</item>
        <item>秘鲁+51</item>
        <item>美国+1</item>
        <item>尼日利亚+234</item>
        <item>挪威+47</item>
        <item>南非+27</item>
        <item>葡萄牙+351</item>
        <item>瑞士+41</item>
        <item>日本+81</item>
        <item>瑞典+46</item>
        <item>斯里兰卡+94</item>
        <item>塞尔维亚+381</item>
        <item>沙特阿拉伯+966</item>
        <item>塞舌尔+248</item>
        <item>泰国+66</item>
        <item>突尼斯+216</item>
        <item>土耳其+90</item>
        <item>乌克兰+380</item>
        <item>委内瑞拉+58</item>
        <item>西班牙+34</item>
        <item>希腊+30</item>
        <item>匈牙利+36</item>
        <item>新西兰+64</item>
        <item>新加坡+65</item>
        <item>英国+44</item>
        <item>印度尼西亚+62</item>
        <item>以色列+972</item>
        <item>印度+91</item>
        <item>意大利+39</item>
        <item>约旦+962</item>
        <item>英属维尔京群岛+1284</item>
        <item>越南+84</item>
        <item>智利+56</item>
    </string-array>
    <!--login-->
    <string name="device_center">设备中心</string>
    <string name="scene_mode">场景模式</string>
    <string name="person_center">个人中心</string>
    <string name="pre_exit">再按一次退出程序</string>
    <string name="login_phonenum">手机号</string>
    <string name="login_passwd">密码</string>
    <string name="login_login">登录</string>
    <string name="phone_nonet">手机网络异常</string>
    <string name="login_regist">注册</string>
    <string name="login_again">重新登录</string>
    <string name="regist_success">注册成功</string>
    <string name="success">成功</string>
    <string name="add_success">添加成功</string>
    <string name="finish_regist">完成注册</string>
    <string name="next_step">下一步</string>
    <string name="go_conn">去连接</string>
    <string name="phone_nowifi">手机没有连接wifi</string>
    <string name="verifycode_login">验证码登录</string>
    <string name="regist_acount">创建账号</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="isforget_pwd">忘记密码?</string>
    <string name="login_noaccounttips">还没有账号吗？</string>
    <string name="verify_phone_num">请输入手机号码</string>
    <string name="registeraty_phone_error">手机号码格式有误</string>
    <string name="forget_edit_pwd">请输入密码</string>
    <string name="login_get_verify">获取验证码</string>
    <string name="login_verify">验证码</string>
    <string name="start_config">开始配置</string>
    <string name="login_check_pwd">确认密码</string>
    <string name="login_reset_pwd">重置密码</string>
    <string name="verify_edit_verify">请输入验证码</string>
    <string name="new_pwd_again">确认密码</string>
    <string name="pwd_again">请再次输入密码</string>
    <string name="pwd_wrong">密码不一致，请重新输入</string>
    <string name="change_success">修改成功</string>
    <string name="login_get_again">重新获取</string>
    <string name="login_new_username">注册</string>
    <string name="verifiy_wrong">验证码有误</string>
    <string name="new_pwd_length">密码不能小于6位</string>
    <string name="add_device_type">添加设备类型</string>
    <string name="add_device">添加设备</string>
    <string name="check_device_light">请确认设备已进入指示灯慢闪状态</string>
    <string name="check_conn_wifi">请将手机连接至图示热点</string>
    <string name="add_device_forlife">添加设备开启智能生活</string>
    <string name="cancle">取消</string>
    <string name="ok">确定</string>


    <!--mine-->
    <string name="setting">设置</string>
    <string name="message_center">消息中心</string>
    <string name="third_offer">第三方接入</string>
    <string name="common_problem">常见问题</string>
    <string name="idea_commit">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="clean">清除缓存</string>
    <string name="time_zone">时区</string>
    <string name="language">语言</string>
    <string name="phone_num">手机号</string>
    <string name="change_pwd">修改密码</string>
    <string name="in_area">所在地区</string>
    <string name="socket">插座</string>
    <string name="exit">退出登录</string>
    <string name="old_pwd">旧密码</string>
    <string name="new_pwd">新密码</string>
    <string name="no_old_pwd">请输入旧密码</string>
    <string name="no_new_pwd">请输入新密码</string>
    <string name="no_new_pwd_again">请再次输入新密码</string>
    <string name="two_pwd">两次输入的密码不一致</string>
    <string name="help">帮助</string>
    <string name="userinfo">个人信息</string>
    <string name="aboutus">关于我们</string>
    <string name="iSCN">智能场景</string>
    <string name="suggestion">意见或建议</string>
    <string name="aboutus_info">\u3000\u3000苏仁公司是致力于健康信息产业系统化服务的一家高科技企业，公司以传感器封装，算法为基础，以互联网为依托，构建适合的商业架构及模式，  公司坚持稳步经营，持续努力为宗旨，为机构客户和消费者提供有竞争力的产品和服务。</string>


    <!--main-->
    <string name="set_remark">设置备注</string>
    <string name="warming">警告</string>
    <string name="wifipwd">请输入wifi密码</string>
    <string name="wifipwd_length">请输入8位及以上的wifi密码</string>
    <string name="set_name">设置名字</string>
    <string name="timing_start">定时开启</string>
    <string name="PowerTutor">电量功耗</string>
    <string name="adviceor">意见或建议</string>
    <string name="yes">确认</string>
    <string name="choose_date_exe">请选择执行日期</string>
    <string name="closed">已关闭</string>
    <string name="opened">已开启</string>
    <string name="commit">提交</string>
    <string name="save">保存</string>
    <string name="open_device">开启设备</string>
    <string name="close_device">关闭设备</string>
    <string name="replace_net">更换网络</string>
    <string name="conn_finish">连接完成后，返回继续添加设备</string>
    <string name="todaypower">今日用电(度)</string>
    <string name="monthpower">本月功耗(W)</string>
    <string name="voltage">当前电压(V)</string>
    <string name="current">当前电流(am)</string>
    <string name="dissipation">当前功耗(W)</string>
    <string name="energy">总电量(度)</string>
    <string name="repeat">重复</string>
    <string name="execute">执行</string>
    <string name="is_delete">是否删除？</string>
    <string name="edit">编辑</string>
    <string name="exit_edit">退出编辑</string>
    <string name="mydevice">我的设备</string>
    <string name="shareddevice">共享的设备</string>
    <string name="device_update">固件升级</string>
    <string name="shared_user">共享用户</string>
    <string name="timed_on">定时开启</string>
    <string name="add_timed">添加定时</string>
    <string name="conn_devicewifi">连接设备wifi</string>
    <string name="shared">共享</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="add_shared">添加共享</string>
    <string name="request_failed">请求失败</string>
    <string name="request_timeout">请求超时</string>
    <string name="request_success">请求成功</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_device">删除此设备</string>
    <string name="device_operate">设备操作</string>
    <string name="smartpower_start">智能电源已开启</string>
    <string name="smartpower_stop">智能电源已开启</string>
    <string name="onestep_control">一键控制更便捷</string>


    <!--scene-->
    <string name="add_scene">添加智能场景</string>
    <string name="edit_scenename">请输入场景名称</string>
    <string name="in_city">当前城市</string>
    <string name="triggering_condition">若触发条件</string>
    <string name="execute_task">执行任务</string>
    <string name="start_homescene">开启回家模式</string>
    <string name="DefaultNickName">测试用户</string>
    <string name="advice_tip">如果您在使用APP或操作硬件的过程中，遇到有不便之处，或不存在您想要的功能，请详细描述，我们将记录您宝贵的意见或建议，并将改进在新的版本中。</string>
    <string name="device_success">提交成功，感谢您的反馈！</string>
    <string name="CopyRight_CN">深圳市苏仁智能科技公司 版权所有</string>
    <string name="CopyRight_EN">© 2018 Shenzhen Miracle Co.,Ltd. All Rights Reserved</string>
    <string name="msg_detail">详情</string>
</resources>
