<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/org_word"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpDimen01" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dpDimen48"
            android:layout_marginTop="@dimen/dpDimen20">

            <RelativeLayout
                android:id="@+id/title_back"
                android:layout_width="@dimen/dpDimen80"
                android:layout_height="match_parent">

                <ImageView
                    style="@style/commom_back_image"
                    android:background="@mipmap/ic_back" />
            </RelativeLayout>

            <TextView
                android:id="@+id/title_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="@color/baise"
                android:textSize="@dimen/spDimen16" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/isuke_background"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/haha"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dpDimen360"
                android:background="@mipmap/ic_prompt02">

                <ImageView
                    android:id="@+id/light"
                    android:layout_width="@dimen/dpDimen25"
                    android:layout_height="@dimen/dpDimen25"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dpDimen50" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dpDimen10"
                    android:text="@string/check_conn_wifi" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/baise">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dpDimen10"
                    android:text="@string/conn_finish" />

                <Button
                    android:id="@+id/conn"
                    style="@style/orgcolor_btnstyle"
                    android:layout_centerInParent="true"
                    android:text="@string/go_conn" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</layout>